--- a/package.json
+++ b/package.json
@@ -11,21 +11,24 @@
     "@amplitude/analytics-browser": "^2.13.3"
   },
   "peerDependencies": {
-    "react": ">=17.0.0"
+    "react": ">=17.0.0",
+    "next": ">=12.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
     "@types/node": "^18.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "next": "^14.0.0"
   },
   "keywords": [
     "react",
     "amplitude",
     "analytics",
     "tracking",
-    "tidio"
+    "tidio",
+    "nextjs"
   ],
   "author": "Tidio Poland <jedrzej@tidio.net> (https://www.tidio.com)",
   "license": "MIT",
