--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@TidioPoland/tidio-lp-tracking",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Reusable Amplitude analytics module for Tidio projects.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "release": "./release.sh",
+    "version": "npm run build && git add dist"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.13.3"
